# voxbento

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .windsurfrules  ARCHITECTURE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  README.md  agents.md  alembic.ini  app.py  deepgram.md  docker-compose.interpretation.yml  docker-compose.yml  docusaurus.config.ts  elleven labs websocket.md  fastapi_app.py  fix_ruff.py  index.html  interpretation.prompt.yml  mediamtx.yml  package-lock.json  package.json  pyproject.toml  sidebars.ts  skills-lock.json  supetonictts.plan.md  test_lazy_load.py  test_lazy_load2.py  test_lazy_load3.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.roo/: rules.md
alembic/: env.py
docs/: .atlas-analysis.json  .gitignore  admin-guide.md  development.md  docs.json  how-it-works.mdx  index.mdx  interpretation-audio-plan.md  introduction.mdx  quickstart.mdx
docs-site/: mdx-components.tsx  next.config.ts  package.json
floor-bot/: Dockerfile  bot.py
plans/: 001-agents-context-docs.md  002-pagination-list-queries.md  003-ruff-linter.md  004-js-instructions-applyto.md  005-secret-key-startup-guard.md  006-env-example-drift.md  007-transcription-characterization-tests.md  008-admin-access-control-dedup.md  009-n1-booth-queries.md  010-tts-config-cache.md  011-tts-pipeline-cleanup.md  012-demo-generation-race.md  013-dedupe-translation-key.md  014-route-tests.md  015-debug-default-false.md  016-listener-rate-limit.md  README.md
portal/: __init__.py  auth.py  booth_identity.py  booth_state.py  config.py  crypto.py  database.py  email.py  globals.py  ingest.py  models.py  rate_limit.py  roles.py  transcription.py  utils.py
src/: App.vue
templates/: 403.html  404.html  429.html  500.html  account.html  base.html  error_base.html  home.html  interpreter_booth.html  interpreter_landing.html  listener-event.html  listener-webrtc.html  listener.html  listener_join.html  login.html  register.html  register_success.html  reset_password.html
tests/: conftest.py  docker_e2e_test.py  test_access_control.py  test_admin_panel.py  test_app.py  test_booth_identity.py  test_booth_state.py  test_caption_aggregator.py  test_config.py  test_crypto.py  test_database.py  test_database_e2e.py  test_demo_routes.py  test_fastapi_app.py  test_globals_http_client.py  test_join_flow.py  test_listener_rate_limit.py  test_listener_routes.py  test_memberships_tokens.py  test_roles.py  test_shared_http_client.py  test_transcription_concurrency.py  test_transcription_providers.py  test_translation_keys.py  test_translation_worker.py  test_tts_providers.py  test_user_auth.py  test_vocabulary.py  verify_persistence.py
(+243 files in other folders)
