[project]
name = "eventyay-interpretation-portal"
version = "0.1.0"
description = "Lightweight collaborative interpretation booth for Eventyay"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "Flask==3.1.3",
    "Flask-SocketIO==5.6.1",
    "aiortc==1.14.0",
    "av==16.1.0",
    "python-dotenv==1.2.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
