[project]
name = "eventyay-interpretation-portal"
version = "0.1.0"
description = "Lightweight collaborative interpretation booth for Eventyay"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "python-dotenv==1.2.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.9.0",
    "PyJWT>=2.9.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.15.0",
    "aiosqlite>=0.21.0",
    "python-multipart>=0.0.30",
    "bcrypt>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "anyio>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
