[project]
name = "eventyay-interpretation-portal"
version = "0.1.0"
description = "Lightweight collaborative interpretation booth for Eventyay"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "python-dotenv==1.2.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.9.0",
    "PyJWT>=2.9.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.15.0",
    "aiosqlite>=0.21.0",
    "python-multipart>=0.0.30",
    "bcrypt>=5.0.0",
    "faster-whisper>=1.2.1",
    "numpy>=2.4.6",
    "websockets>=16.0",
    "cryptography>=48.0.0",
    "tenacity>=9.1.4",
    "langcodes>=3.5.1",
    "pycountry>=26.2.16",
]

[project.optional-dependencies]
nvidia = ["nvidia-riva-client>=2.21.1"]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "anyio>=4.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, C4: flake8-comprehensions
select = ["E", "W", "F", "I", "C4"]
ignore = [
    "E501",   # line too long — handled by formatter, not linter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # allow unused imports in test files (fixtures, re-exports)
"alembic/*" = ["F401", "E402"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]

